# haven-engine

./: .gitignore  Cargo.toml  DEMO.md  README.md
benchmarks/: throughput_v_compliance.rs
data/: afcars_trends.xlsx  children.json  families.json
deploy/: edge-inference-manifest.yaml
research/: citations.md
scripts/: ingest_data.py  run_demo.py
src/: lib.rs
src/core/: mod.rs  state_machine.rs  symbolic_validator.rs
src/graph/: mod.rs  relational_topology.rs
src/neural/: __init__.py  embedding_pipeline.py  pii_masking.py  requirements.txt
tests/: test_neural.py  test_symbolic_validator.rs
