[package]
name = "haven-engine"
version = "0.1.0"
edition = "2021"
authors = ["Jorge Martinez"]
description = "Neuro-symbolic foster care placement engine with O(1) constraint checking"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
thiserror = "1"
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "throughput_v_compliance"
harness = false
path = "benchmarks/throughput_v_compliance.rs"
